--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 <body>
    
     <h1 class="results"></h1>
+    <div class="divcenter">
      <div class="grid">
 
      </div>
+    </div>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
