--- a/space-invadersvg/index.html
+++ b/space-invadersvg/index.html
@@ -14,8 +14,18 @@
         font-family: Arcade, sans-serif;
         font-size: 14px;
     }
-</style>
 
+    #back_arrow {
+        position: absolute;
+        top: 20;
+        right: 20;
+        height: 20px;
+        width: auto;
+        z-index: 12;
+    }
+
+</style>
+<a href="#"><img id="back_arrow"src="img/backarrow.png" alt="back arrow"></a>
 <div style="position: relative;" id="parentDiv">
     <p style="position: absolute; z-index: 10; color: white; left: 10px; top: 10px; margin: 0;">
 
