--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <title>Space-Invaders</title>
 </head>
 <body>
-   
-    <h1 class="results"></h1>
+   <a href="#"><img id="back_arrow"src="assets/img/backarrow.png" alt="back arrow"></a>
+    <h1 class="results"></h1> 
     <div class="divcenter">
      <div class="grid">
 
      </div>
     </div>
+   
     <script src="assets/js/script.js"></script>
 </body>
 </html>
