--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Space Invaders</title>
     <link rel="stylesheet" href="style.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Monoton&display=swap');
@@ -37,7 +37,7 @@
                                     </video>
                                 </li>
                                 <li>Touche de direction : <i class="fa-solid fa-arrow-left-long"></i>A ; D<i class="fa-solid fa-arrow-right-long"></i> shoot : SPACE </li>
-                                <li><button class="custom-btn btn-12"><span><a href="https://upside-web.fr">GO!</a></span><span>Play<i class="fa-solid fa-play"></i></span></button></li>
+                                <li><button class="custom-btn btn-12"><span><a href="space-invadersvg/index.html">GO!</a></span><span>Play<i class="fa-solid fa-play"></i></span></button></li>
                                 </ul>
             </div>
             <div class="jeux-2"><ul>
