--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     </video>
                 </li>
                 <li>Touche de direction : <i class="fa-solid fa-arrow-left-long"></i>Left ; Right<i class="fa-solid fa-arrow-right-long"></i> shoot : <i class="fa-solid fa-up-long"></i> </li>
-                <li><button class="custom-btn btn-12"><span><a href="https://upside-web.fr">GO!</a></span><span>Play<i class="fa-solid fa-play"></i></span></button></li>
+                <li><button class="custom-btn btn-12"><span><a href="space-invaders-retro/index.html">GO!</a></span><span>Play<i class="fa-solid fa-play"></i></span></button></li>
                 </ul>
         </div>
         
