--- a/space-invaders-retro/index.html
+++ b/space-invaders-retro/index.html
@@ -8,7 +8,7 @@
     <title>Space-Invaders</title>
 </head>
 <body>
-   <a href="#"><img id="back_arrow"src="assets/img/backarrow.png" alt="back arrow"></a>
+   <a href="../index.html"><img id="back_arrow"src="assets/img/backarrow.png" alt="back arrow"></a>
     <h1 class="results"></h1> 
     <div class="divcenter">
      <div class="grid">
