--- a/easter-egg/index.html
+++ b/easter-egg/index.html
@@ -25,7 +25,7 @@
     }
 
     #cheat {
-        display: none;
+        display: flex;
         position: absolute;
         bottom: 0;
         left: 30;
@@ -44,7 +44,7 @@
 
     <canvas></canvas>
 </div>
-<p id="cheat">cheatcode = "alcool"</p>
+<p id="cheat">normal version = "alcool" again</p>
 <script
   src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"
   integrity="sha512-H6cPm97FAsgIKmlBA4s774vqoN24V5gSQL4yBTDOY2su2DeXZVhQPxFK4P6GPdnZqM9fg1G3cMv5wD7e6cFLZQ=="
