--- a/easter-egg/index.html
+++ b/easter-egg/index.html
@@ -34,7 +34,7 @@
     }
 
 </style>
-<a href="#"><img id="back_arrow"src="img/backarrow.png" alt="back arrow"></a>
+<a href="../index.html"><img id="back_arrow"src="img/backarrow.png" alt="back arrow"></a>
 <div style="position: relative;" id="parentDiv">
     <p style="position: absolute; z-index: 10; color: white; left: 10px; top: 10px; margin: 0;">
 
